[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
ureq = { version = "2.4.0", features = ["json"] }
url = "2.2.2"
reqwest = { version = "0.11.9", features = ["json"], optional = true }

[features]
async = ["reqwest"]
